--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pre-commit": "^1.1.2",
     "should": "~8.3.1"
   },
+  "license": "MIT",
   "main": "./index",
   "pre-commit": [
     "test"
