--- a/package.json
+++ b/package.json
@@ -15,22 +15,28 @@
     "url": "git://github.com/cayasso/advent-memory.git"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha",
-    "build": "npm run clean && ./node_modules/.bin/babel src -d lib",
+    "test": "npm run lint && mocha",
+    "build": "npm run clean && babel src -d lib",
     "prepublish": "npm run build",
-    "clean": "rm -rf lib/"
+    "clean": "rm -rf lib/",
+    "lint": "xo --env=mocha"
   },
-  "dependencies": {
-    "any-promise": "^1.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-core": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "mocha": "~2.4.5",
-    "pre-commit": "^1.1.2",
-    "should": "~8.3.1"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "eslint-config-prettier": "^2.8.0",
+    "mocha": "~4.0.1",
+    "pre-commit": "^1.2.2",
+    "should": "~13.1.3",
+    "xo": "^0.18.2"
+  },
+  "xo": {
+    "extends": "prettier",
+    "rules": {
+      "no-await-in-loop": 0,
+      "unicorn/no-process-exit": 0
+    }
   },
   "license": "MIT",
   "main": "./index",
