--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 sudo: false
 language: node_js
 node_js:
-  - "7"
-  - "6"
+  - '12'
+  - '10'
+  - '8'
 before_install:
-  - "npm install npm -g"
+  - 'npm install npm -g'
